# pdf-toolbox

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cli/: mod.rs
src-tauri/src/core/: error.rs  image_export.rs  merge.rs  mod.rs  progress.rs  split.rs  text.rs
src-tauri/src/tauri_app/: mod.rs
src-tauri/src/utils/: fs.rs  log.rs  mod.rs
src/scripts/: app.js
src/styles/: app.css
