[package]
name = "pdf_toolbox"
version = "0.1.0"
description = "Cross-platform PDF toolbox with Tauri GUI and Rust CLI"
authors = ["pdf_toolbox"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.80"

[lib]
name = "pdf_toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pdf_toolbox"
path = "src/main.rs"

[build-dependencies]
flate2 = "1.1"
tar = "0.4"
tauri-build = { version = "2.2", features = [] }
ureq = { version = "2.10", features = ["tls"] }

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
lopdf = "0.34"
pdf = "0.9"
pdfium-render = { version = "0.8", features = ["image", "pdfium_latest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.2", features = [] }
tauri-plugin-dialog = "2.2"
tauri-plugin-opener = "2.2"
thiserror = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
walkdir = "2.5"
